tests/gen-test/test_out/swap-macro-parse-out.txt
error: expected start of module item but found Macro
 --> swap-macro\root.ctl:1:918
  |
1 | use { "water/option" ; "water/ptr" ; "water/macros/tokens" ; } ; struct LastToken { last : MacroToken ; } ; struct TwoTokens { second : MacroToken ; first : MacroToken ; } ; enum SwapState { Two : TwoTokens ; Last : LastToken ; Empty ; } ; #[macro swap] ; struct Swap { state : SwapState ; lexer : MacroLexer ; } ; impl TokenMacro for Swap {     fn "default" new(s : ^ Self, lexer : MacroLexer)     {         ptr\        write(s,\        {             state :\Two ~\            { first : lexer.next() ; second : lexer.next() ; } ; lexer ;         }) ;     } ; fn "default" next(s : ^ Self) -> Option\[MacroToken] =>\Some ~     match s.state     {        \Two ~\{ first, second }         { s.state =\Last ~\{ last : first } ; second } ;\Last ~\        { last } { s.state =\Empty ; last } ;\Empty => return\None ;     } ; fn "default" drop(s : ^ Self) -> MacroLexer { ptr\read(^ s.lexer) }     ; } ; break ; #[entry] ; swap! swap! fn -> main uint => 0 ;
  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      ^^^^^ here
  |
  = info: module item can only start with 'struct' or 'fn' or 'spec' or 'enum' or 'impl' or '#'

